remove: 넘치는 요소 우선 제거

--- a/index.html
+++ b/index.html
@@ -71,17 +71,11 @@
               <div class="content__item">
                 <img src="assets/movie_img/item_img.jpg" alt="" />
               </div>
-              <div class="content__item">
-                <img src="assets/movie_img/item_img.jpg" alt="" />
-              </div>
             </div>
           </div>
           <div class="content__group-item play">
             <span class="content__group-title">시청중인 콘텐츠</span>
             <div class="content__list">
-              <div class="content__item">
-                <img src="assets/movie_img/item_img.jpg" alt="" />
-              </div>
               <div class="content__item">
                 <img src="assets/movie_img/item_img.jpg" alt="" />
               </div>
@@ -106,5 +100,6 @@
       src="https://kit.fontawesome.com/a4852596ef.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/headerEvent.js"></script>
   </body>
 </html>
