feat: 최소 기능 마무리

--- a/github-finder/index.html
+++ b/github-finder/index.html
@@ -26,25 +26,26 @@
           <div class="user__profile-img">
             <img src="" alt="profile-img" />
           </div>
-          <a href="">View Profile</a>
+          <a href="" target="_blank">View Profile</a>
         </div>
         <div class="user__profile-right">
           <div class="user__profile-info-count">
-            <div class="public-repos__count">Public repos: 53</div>
-            <div class="public-gists__count">Public Gists: 0</div>
-            <div class="followers__count">Followers: 1174</div>
-            <div class="following__count">Following: 0</div>
+            <div class="public-repos__count"></div>
+            <div class="public-gists__count"></div>
+            <div class="followers__count"></div>
+            <div class="following__count"></div>
           </div>
           <div class="user__info">
-            <div>Company: null</div>
-            <div>Website/blog: aasdfs</div>
-            <div>Location:</div>
-            <div>Member Since: aasdfs</div>
+            <div class="user__info-company"></div>
+            <div class="user__info-blog"></div>
+            <div class="user__info-location"></div>
+            <div class="user__info-since"></div>
           </div>
         </div>
       </div>
       <div class="latest-repos none">
         <h3 class="latest-repos__title">Latest Repos</h3>
+        <div class="latest-repos__list"></div>
       </div>
     </main>
     <footer></footer>
