feat: spinner, 잔디 기능 하위 과제 추가

--- a/github-finder/index.html
+++ b/github-finder/index.html
@@ -46,9 +46,15 @@
       <div class="latest-repos none">
         <h3 class="latest-repos__title">Latest Repos</h3>
         <div class="latest-repos__list"></div>
+        <div class="contribution__graph">
+          <img src="" alt="contribution graph" />
+        </div>
       </div>
     </main>
     <footer></footer>
+    <div class="spinner__bg none">
+      <div class="spinner"></div>
+    </div>
     <script type="module" src="js/githubAPIConnecter.js"></script>
   </body>
 </html>
